welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: Missing closing brace `}' assumed here
var vuB = false
^Program:1: error: expected class or object definition
var vuB = false
^Program:2: error: expected class or object definition
def haveBaggle():Boolean = {
^