welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuB = false
def haveBaggle():Boolean = {
  vu = false
  for (i <- 1 to 7){
    avance()
    if(estSurBiscuit()){vu = true)
  }
   for (i <- 1 to 7){
    recule()
  }
  return(vue)
}
  

do{
  vuB = haveBaggle() 
}while(vuB == false)